--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         <script src="index.js"></script>
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="main.css">
+        <meta property="theme-colour" content="#000000">
+        <meta property="twitter:card" content="summary">
+        <meta property="twitter:site" content="@SIBROfficial">
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="SIBR">
+        <meta property="twitter:title" content="Blessing Builder">
+        <meta property="og:title" content="Blessing Builder">
+        <meta property="twitter:description" content="Have fun making up some fake blessings and decrees!">
+        <meta property="og:description" content="Have fun making up some fake blessings and decrees!">
+        <meta property="description" content="Have fun making up some fake blessings and decrees!">
     </head>
     <body>
         <div class="content">
