--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <link rel="stylesheet" href="main.css">
         <meta property="theme-colour" content="#000000">
         <meta property="twitter:card" content="summary">
-        <meta property="twitter:site" content="@SIBROfficial">
+        <meta property="twitter:site" content="@__beefox__">
         <meta property="og:type" content="website">
-        <meta property="og:site_name" content="SIBR">
+        <meta property="og:site_name" content="Beefox.xyz">
         <meta property="twitter:title" content="Blessing Builder">
         <meta property="og:title" content="Blessing Builder">
         <meta property="twitter:description" content="Have fun making up some fake blessings and decrees!">
