Add game icons dot net

--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
             <hr>
             <p></p>
             <button onclick="download()" class="button download">Download Image</button>
-            <h1 style="text-align: center;">Click on the name, description, or sponsor to edit the text. When downloading the image, the "Toggle Sponsor" button will be ignored.</h1>
+            <p style="text-align: center;">Click on the name, description, or sponsor to edit the text. When downloading the image, the "Toggle Sponsor" button will be ignored.</p>
+            <p style="text-align: center;">A good site for images for decrees is <a href="https://game-icons.net">game-icons.net</a></p>
         </div>
     </body>
 </html>
